@@ -1,0 +1,4 @@
+{  "debian_depends" : [],
+   "debian_build_depends" : [],
+   "debian_build_depends_indep" : []
+}
