@@ -11,6 +11,7 @@
 \B\.gitpre-commit$
 \B\.svn\b
 \B\.travis.yml$
+\B\.provision.json$
 
 # Avoid Makemaker generated and utility files.
 \bMakefile$
@@ -34,6 +35,7 @@
 \bBuild$
 \bBuild.bat$
 \b_build
+\b.build.PL
 
 # Avoid Dist::Zilla config file
 \bdist.ini$
@@ -60,6 +62,7 @@
 TAGS
 Thumbs.db
 \bipc_srlock
+\bvar/etc/META.json
 \bvar/root/docs/assets
 \bvar/root/docs/de
 \bvar/root/docs/en/01_Examples/02
@@ -76,3 +79,4 @@ Thumbs.db
 \bApp-Doh-v?[\d\.\_]+
 \bdocs/Projects
 \blocal/
+\bdebian/
