@@ -1,8 +1,15 @@
 #!/usr/bin/env perl
 
-use File::Spec::Functions qw( catdir updir );
-use FindBin               qw( $Bin );
-use lib               catdir( $Bin, updir, 'lib' );
+use English qw( -no_match_vars );
+use FindBin qw( $Bin );
+use File::Spec;
+
+BEGIN {
+   my $path = File::Spec->catfile( $Bin, 'doh-localenv' );
+
+   do $path or die $EVAL_ERROR || "Path ${path} not done\n";
+}
+
 use strictures::defanged; # Make strictures the same as use strict warnings
 
 use App::Doh::CLI;
