@@ -73,7 +73,11 @@ run               = cp var/root/docs/en/00_Getting_Started.md README.md
 
 [CopyFilesFromBuild]
 copy              = Build.PL
+copy              = META.json
 move              = cpanfile
+
+[Run::AfterBuild]
+run               = mv META.json var/etc
 
 [GatherDir]
 exclude_filename  = cpanfile
